// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentAccess renders 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-circle PodBrowser-avatar"
  >
    <img
      alt="Alice"
      class="PodBrowser-img"
      src="http://example.com/alice.jpg"
    />
  </div>
  <p
    class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
    data-testid="agent-web-id"
  >
    Alice
  </p>
  <form
    class="PodBrowser-form"
  >
    <div
      class="PodBrowser-container"
    >
      <button
        class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
        data-testid="permissions-dropdown-button"
        tabindex="0"
        type="button"
      >
        <span
          class="PodBrowser-label"
        >
          <span />
          <span
            class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="PodBrowser-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </span>
        </span>
        <span
          class="PodBrowser-root"
        />
      </button>
      <section
        class="PodBrowser-selectionClosed"
      >
        <ul
          class="PodBrowser-root PodBrowser-padding"
        >
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-view"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="view"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                View
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-edit"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="edit"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Edit
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-append"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="append"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Append
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root"
              data-testid="permission-checkbox-control"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    name="control"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
              >
                Control
              </span>
            </label>
          </li>
        </ul>
        <button
          class="PodBrowser-button"
          type="submit"
        >
          Save
        </button>
      </section>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AgentAccess renders an error message if it's unable to load profile 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-message PodBrowser-message--error"
  >
    <div
      class="PodBrowser-message__main"
    >
      Failed to load http://example.com/webId#me
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess user tries to change access for themselves checkboxes are disabled 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-circle PodBrowser-avatar"
  >
    <img
      alt="Alice"
      class="PodBrowser-img"
      src="http://example.com/alice.jpg"
    />
  </div>
  <p
    class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
    data-testid="agent-web-id"
  >
    Alice
  </p>
  <form
    class="PodBrowser-form"
  >
    <div
      class="PodBrowser-container"
    >
      <button
        class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
        data-testid="permissions-dropdown-button"
        tabindex="0"
        type="button"
      >
        <span
          class="PodBrowser-label"
        >
          <span />
          <span
            class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="PodBrowser-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </span>
        </span>
        <span
          class="PodBrowser-root"
        />
      </button>
      <section
        class="PodBrowser-selectionClosed"
      >
        <ul
          class="PodBrowser-root PodBrowser-padding"
        >
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-view"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="view"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                View
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-edit"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="edit"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Edit
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-append"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="append"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Append
              </span>
            </label>
          </li>
          <li
            class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
          >
            <label
              class="PodBrowser-root PodBrowser-disabled"
              data-testid="permission-checkbox-control"
            >
              <span
                aria-disabled="true"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled PodBrowser-colorSecondary PodBrowser-disabled PodBrowser-disabled"
                tabindex="-1"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    disabled=""
                    name="control"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-disabled PodBrowser-body1"
              >
                Control
              </span>
            </label>
          </li>
        </ul>
        <button
          class="PodBrowser-button"
          type="submit"
        >
          Save
        </button>
      </section>
    </div>
  </form>
</DocumentFragment>
`;
